--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
-# This includes the license file(s) in the wheel.
-# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
-license_files = LICENSE
+long_description = file: README.rst
+license = GPLv3
+license_file = LICENSE
 
 [bdist_wheel]
 # This flag says to generate wheels that support both Python 2 and Python
